--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,24 @@
-/*.container {
-	border: 1px solid pink;
-}*/
+*, *::before, *::after {
+	box-sizing: border-box;
+	font-family: Gotham Rounded;
+	color: white;
+}
 
+body {
+	padding: 0;
+	margin; 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: auto;
+	background-color: #333;
+}
 
+button, img {
+  cursor: pointer;
+}
+
+.input-group {
+	margin-bottom: 20px;
+}
