--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,20 @@
 *, *::before, *::after {
+	margin: 0;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: Gotham Rounded;
-	color: white;
 }
 
 body {
-	padding: 0;
-	margin; 0;
+	font-family: 'Raleway';
+	color: white;
+	letter-spacing: .06em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
 	width: auto;
 	background-color: #333;
+	text-rendering: optimizeLegibility;
 }
 
 button, img {
@@ -20,5 +22,5 @@ button, img {
 }
 
 .input-group {
-	margin-bottom: 20px;
+	margin-bottom: 2%;
 }
